--- a/public/produk.html
+++ b/public/produk.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produk</title>
     <link rel="stylesheet" href="../public/css/output.css" />
+    <link rel="stylesheet" href="../public/css/hamburger.css">
 
     <!-- Google icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -26,18 +27,25 @@
   <body id="topp">
     <!-- Navbar -->
     <header class="bg-blue w-full">
-      <div class="md:flex md:flex-row flex flex-col justify-between items-center px-8 py-4">
-        <a href="index.html">
-          <img src="../asset/logo-gaga.png" alt="" class="md:w-24" />
-        </a>
-        <div class="flex list-none md:gap-20 gap-4 md:pt-0 pt-4">
-          <li><a href="about.html" class="text-white md:text-xl text-base font-medium">About Us</a></li>
-          <li><a href="produk.html" class="text-white md:text-xl text-base font-medium">Our Products</a></li>
-          <li><a href="partner.html" class="text-white md:text-xl text-base font-medium">Partnership</a></li>
-          <li><a href="career.html" class="text-white md:text-xl text-base font-medium">Career</a></li>
-        </div>
+      <div class="flex justify-between items-center px-8 py-4">
+          <a href="index.html">
+              <img src="../asset/logo-gaga.png" alt="" />
+          </a>
+          <ul class="md:flex md:flex-row flex-col md:w-auto w-full md:gap-20 gap-4 menu md:static md:bg-transparent bg-blue absolute z-10 top-[92px] left-0">
+              <li class="py-4 text-center"><a href="about.html" class="text-white text-lg font-medium">About Us</a></li>
+              <li class="py-4 text-center"><a href="produk.html" class="text-white text-lg font-medium">Our Products</a></li>
+              <li class="py-4 text-center"><a href="partner.html" class="text-white text-lg font-medium">Partnership</a></li>
+              <li class="py-4 text-center"><a href="career.html" class="text-white text-lg font-medium">Career</a></li>
+          </ul>
+          <div class="md:hidden block">
+              <button class="hamburger hamburger--squeeze" type="button">
+                  <span class="hamburger-box">
+                      <span class="hamburger-inner bg-teal-600 before:bg-teal-600 after:bg-teal-600"></span>
+                  </span>
+              </button>
+          </div>
       </div>
-  </header>
+    </header>
 
     <main>
         <article>
