--- a/public/career.html
+++ b/public/career.html
@@ -50,7 +50,7 @@
           <div class="md:hidden block">
               <button class="hamburger hamburger--squeeze" type="button">
                   <span class="hamburger-box">
-                      <span class="hamburger-inner bg-teal-600 before:bg-teal-600 after:bg-teal-600"></span>
+                      <span class="hamburger-inner"></span>
                   </span>
               </button>
           </div>
