--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,13 @@
 
     @media (max-width: 768px) {
     .swiper {
-        height: 30rem; /* Atur ulang tinggi untuk layar yang lebih kecil */
+        height: auto; /* Atur ulang tinggi untuk layar yang lebih kecil */
         }
     }
 
     @media (max-width: 480px) {
     .swiper {
-        height: 20rem; /* Sesuaikan lagi untuk ukuran layar ponsel */
+        height: auto; /* Sesuaikan lagi untuk ukuran layar ponsel */
         width: 100%;
         }
     }
@@ -97,8 +97,9 @@
                 <div class="flex flex-col items-center pt-6 justify-center">
                     <h1 class="lg:text-3xl text-2xl font-medium text-blue">Our Comitment</h1>
                     <p class="pt-2 font-thin md:px-0 px-4 text-center text-gray-700">"GAGA is committed to producing food that is halal and safe for consumption."</p>
-                    <div class="grid xl:grid-cols-10 lg:grid-cols-5 grid-cols-3 gap-8 pt-8 items-center justify-center" id="logo-product">
+                    <div class="grid grid-cols-10 md:gap-8 md:mx-8 mx-2 pt-8 items-center justify-center" id="logo-product">
                         <!-- Logo produk -->
+                        
                     </div>
                 </div>
             </div>
@@ -111,11 +112,11 @@
             </div>
 
             <!-- Contact Us -->
-            <div class="mt-12">
+            <div class="md:mt-12 mt-1">
                 <div class="xl:mx-20 md:mx-12 mx-4 pt-12 grid xl:grid-cols-2 grid-cols-1 gap-6">
                     <div class="sm:flex xl:flex-col lg:flex-row sm:flex-row sm:gap-24 flex-col">
-                        <div class="flex flex-col">
-                            <h1 class="text-3xl font-bold text-blue">PT JAKARANA TAMA</h1>
+                        <div class="flex flex-col text-blue">
+                            <h1 class="lg:text-3xl text-2xl font-bold">PT JAKARANA TAMA</h1>
                             <h3 class="text-2xl font-medium">Head Office</h3>
                                 <div class="pt-4 leading-8">
                                     <p class="text-lg pt-2">Jl. Bintaro Raya No.15, RT.11/RW.10</p>
@@ -137,15 +138,15 @@
                     <div class="flex flex-col items-center justify-center">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0795913919924!2d106.77129107503795!3d-6.253243893735208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1a4f71c6edd%3A0x49fec2a2d463e427!2sPT%20Jakarana%20Tama%20Main%20Office%20(GaGa)!5e0!3m2!1sen!2sid!4v1727405563222!5m2!1sen!2sid"
                         class="sm:w-[700px] sm:h-[350px]" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <div class="flex flex-col justify-center items-center mt-8">
-                            <h1 class="text-3xl font-bold text-blue">GAGA Social Media</h1>
+                        <div class="flex flex-col justify-center text-blue items-center mt-8">
+                            <h1 class="text-3xl font-bold">GAGA Social Media</h1>
                             <div class="pt-6">
                                 <div class="flex gap-4 justify-center items-center">
-                                    <img src="../asset/icon-ig.png" alt="" class="md:w-8 md:h-8 w-6 h-6"/>
+                                    <img src="../asset/icon-ig.png" alt="" class="w-8 h-8"/>
                                     <p>@gagafood.co.id | @gaga100extrapedas | @indonesia.mie</p>
                                 </div>
                                 <div class="flex gap-4 pt-4 justify-center items-center">
-                                    <img src="../asset/icon-tt.png" alt="" class="md:w-8 md:h-8 w-6 h-6"/>
+                                    <img src="../asset/icon-tt.png" alt="" class="w-8 h-8"/>
                                     <p>@gagafood.co.id | @gaga100extrapedas | @indonesia.mie</p>
                                 </div>
                             </div>
