--- a/public/partner.html
+++ b/public/partner.html
@@ -44,7 +44,7 @@
             <div class="md:hidden block">
                 <button class="hamburger hamburger--squeeze" type="button">
                     <span class="hamburger-box">
-                        <span class="hamburger-inner bg-teal-600 before:bg-teal-600 after:bg-teal-600"></span>
+                        <span class="hamburger-inner"></span>
                     </span>
                 </button>
             </div>
@@ -63,31 +63,31 @@
                     <div class="md:mx-20 mx-4">
                         <div class="py-5">
                             <div class="items-center flex gap-4 pb-4">
-                                <img src="../asset/svg/white-star.png" alt="" class="bg-red w-4 rounded-full">
+                                <img src="../asset/svg/gold-star.png" alt="" class="w-6 rounded-full">
                                 <h1 class="md:text-3xl text-xl font-medium text-red">Top Quality</h1>
                             </div>
-                            <p class="md:text-2xl text-xl font-normal">We only export the highest quality food products, produced under strict standards to ensure international customer satisfaction.</p>
+                            <p class="md:text-2xl text-lg font-normal text-blue">We only export the highest quality food products, produced under strict standards to ensure international customer satisfaction.</p>
                         </div>
                         <div class="py-5">
                             <div class="items-center flex gap-4 pb-4">
-                                <img src="../asset/svg/white-star.png" alt="" class="bg-red w-4 rounded-full">
+                                <img src="../asset/svg/gold-star.png" alt="" class="w-6 rounded-full">
                                 <h1 class="md:text-3xl text-xl font-medium text-red">Unique and Authentic Products</h1>
                             </div>
-                            <p class="md:text-2xl text-xl font-normal">Our products reflect the rich flavours and culinary traditions of Indonesia, offering something unique and different in the international market.</p>
+                            <p class="md:text-2xl text-lg font-normal text-blue">Our products reflect the rich flavours and culinary traditions of Indonesia, offering something unique and different in the international market.</p>
                         </div>
                         <div class="py-5">
                             <div class="items-center flex gap-4 pb-4">
-                                <img src="../asset/svg/white-star.png" alt="" class="bg-red w-4 rounded-full">
+                                <img src="../asset/svg/gold-star.png" alt="" class="w-6 rounded-full">
                                 <h1 class="md:text-3xl text-xl font-medium text-red">Extensive Export Experience</h1>
                             </div>
-                            <p class="md:text-2xl text-xl font-normal">With broad experience in international trade, we understand the challenges and opportunities in exporting and are ready to support our partners every step of the way.</p>
+                            <p class="md:text-2xl text-lg font-normal text-blue">With broad experience in international trade, we understand the challenges and opportunities in exporting and are ready to support our partners every step of the way.</p>
                         </div>
                         <div class="py-5">
                             <div class="items-center flex gap-4 pb-4">
-                                <img src="../asset/svg/white-star.png" alt="" class="bg-red w-4 rounded-full">
+                                <img src="../asset/svg/gold-star.png" alt="" class="w-6 rounded-full">
                                 <h1 class="md:text-3xl text-xl font-medium text-red">Comprehensive Support</h1>
                             </div>
-                            <p class="md:text-2xl text-xl font-normal">We provide full support, from handling export documentation and meeting international standards to assisting with marketing in the destination country.</p>
+                            <p class="md:text-2xl text-lg font-normal text-blue">We provide full support, from handling export documentation and meeting international standards to assisting with marketing in the destination country.</p>
                         </div>
                     </div>
 
@@ -99,24 +99,24 @@
                         <div class="md:mx-20 mx-4">
                             <div class="py-5">
                                 <div class="items-center flex gap-4 pb-4">
-                                    <img src="../asset/svg/white-star.png" alt="" class="bg-red w-4 rounded-full">
+                                    <img src="../asset/svg/gold-star.png" alt="" class="w-6 rounded-full">
                                     <h1 class="md:text-3xl text-xl font-medium text-red">International Distributors</h1>
                                 </div>
-                                <p class="md:text-2xl text-xl font-normal">Collaborate in distributing Gaga Food products to international markets.</p>
+                                <p class="md:text-2xl text-lg font-normal text-blue">Collaborate in distributing Gaga Food products to international markets.</p>
                             </div>
                             <div class="py-5">
                                 <div class="items-center flex gap-4 pb-4">
-                                    <img src="../asset/svg/white-star.png" alt="" class="bg-red w-4 rounded-full">
+                                    <img src="../asset/svg/gold-star.png" alt="" class="w-6 rounded-full">
                                     <h1 class="md:text-3xl text-xl font-medium text-red">New Market Development</h1>
                                 </div>
-                                <p class="md:text-2xl text-xl font-normal">Explore and expand the reach of our products to new countries.</p>
+                                <p class="md:text-2xl text-lg font-normal text-blue">Explore and expand the reach of our products to new countries.</p>
                             </div>
                             <div class="py-5">
                                 <div class="items-center flex gap-4 pb-4">
-                                    <img src="../asset/svg/white-star.png" alt="" class="bg-red w-4 rounded-full">
+                                    <img src="../asset/svg/gold-star.png" alt="" class="w-6 rounded-full">
                                     <h1 class="md:text-3xl text-xl font-medium text-red">Exclusive Collaboration</h1>
                                 </div>
-                                <p class="md:text-2xl text-xl font-normal">Become an exclusive partner in a specific region to ensure Gaga Food products are available worldwide.</p>
+                                <p class="md:text-2xl text-lg font-normal text-blue">Become an exclusive partner in a specific region to ensure Gaga Food products are available worldwide.</p>
                             </div>
                         </div>
                     </div>
@@ -129,22 +129,16 @@
                         <div class="md:mx-20 mx-4">
                             <div class="py-5">
                                 <div class="flex items-start gap-4 p-2">
-                                    <span class="material-symbols-outlined pt-1">
-                                        atr
-                                        </span>
-                                    <p class="md:text-2xl text-xl font-normal text-blue">We offer opportunities for distributors and agents who want to expand their portfolio with premium products from Indonesia.</p>
+                                    <img src="../asset/svg/dots.png" alt="" class="w-6 pt-2">
+                                    <p class="md:text-2xl text-lg font-normal text-blue">We offer opportunities for distributors and agents who want to expand their portfolio with premium products from Indonesia.</p>
                                 </div>
                                 <div class="flex items-start gap-4 p-2">
-                                    <span class="material-symbols-outlined pt-1">
-                                        atr
-                                        </span>
-                                    <p class="md:text-2xl text-xl font-normal text-blue">We are excited to work with you to bring high-quality Gaga Food products to consumers around the globe.</p>
+                                    <img src="../asset/svg/dots.png" alt="" class="w-6 pt-2">
+                                    <p class="md:text-2xl text-lg font-normal text-blue">We are excited to work with you to bring high-quality Gaga Food products to consumers around the globe.</p>
                                 </div>
                                 <div class="flex items-start gap-4 p-2">
-                                    <span class="material-symbols-outlined pt-1">
-                                        atr
-                                        </span>
-                                    <p class="md:text-2xl text-xl font-normal text-blue">If you are interested in becoming an export partner of Gaga Food, please contact us through the contact form or email us at <span class="text-red"> export@jakaranatama.co.id</span></p>
+                                    <img src="../asset/svg/dots.png" alt="" class="w-6 pt-2">
+                                    <p class="md:text-2xl text-lg font-normal text-blue">If you are interested in becoming an export partner of Gaga Food, please contact us through the contact form or email us at<span class="text-red"> export@jakaranatama.co.id</span></p>
                                 </div>
                             </div>
                         </div>
@@ -156,8 +150,8 @@
             <div class="mt-12">
                 <div class="xl:mx-20 md:mx-12 mx-4 pt-12 grid xl:grid-cols-2 grid-cols-1 gap-6">
                     <div class="sm:flex xl:flex-col lg:flex-row sm:flex-row sm:gap-24 flex-col">
-                        <div class="flex flex-col">
-                            <h1 class="text-3xl font-bold text-blue">PT JAKARANA TAMA</h1>
+                        <div class="flex flex-col text-blue">
+                            <h1 class="text-3xl font-bold">PT JAKARANA TAMA</h1>
                             <h3 class="text-2xl font-medium">Head Office</h3>
                                 <div class="pt-4 leading-8">
                                     <p class="text-lg pt-2">Jl. Bintaro Raya No.15, RT.11/RW.10</p>
@@ -179,15 +173,15 @@
                     <div class="flex flex-col items-center justify-center">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0795913919924!2d106.77129107503795!3d-6.253243893735208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1a4f71c6edd%3A0x49fec2a2d463e427!2sPT%20Jakarana%20Tama%20Main%20Office%20(GaGa)!5e0!3m2!1sen!2sid!4v1727405563222!5m2!1sen!2sid"
                         class="sm:w-[700px] sm:h-[350px]" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <div class="flex flex-col justify-center items-center mt-8">
-                            <h1 class="text-3xl font-bold text-blue">GAGA Social Media</h1>
+                        <div class="flex flex-col justify-center text-blue items-center mt-8">
+                            <h1 class="lg:text-3xl text-2xl font-bold">GAGA Social Media</h1>
                             <div class="pt-6">
                                 <div class="flex gap-4 justify-center items-center">
-                                    <img src="../asset/icon-ig.png" alt="" class="md:w-8 md:h-8 w-6 h-6"/>
+                                    <img src="../asset/icon-ig.png" alt="" class="w-8 h-8"/>
                                     <p>@gagafood.co.id | @gaga100extrapedas | @indonesia.mie</p>
                                 </div>
                                 <div class="flex gap-4 pt-4 justify-center items-center">
-                                    <img src="../asset/icon-tt.png" alt="" class="md:w-8 md:h-8 w-6 h-6"/>
+                                    <img src="../asset/icon-tt.png" alt="" class="w-8 h-8"/>
                                     <p>@gagafood.co.id | @gaga100extrapedas | @indonesia.mie</p>
                                 </div>
                             </div>
