--- a/public/product/detail7.html
+++ b/public/product/detail7.html
@@ -42,7 +42,7 @@
             <div class="mx-auto container mt-8">
                 <div class="flex flex-col items-center justify-center md:mx-0 mx-6">
                     <h1 class="md:text-3xl text-xl font-bold text-center text-blue">GAGA INDONESIAN MIE</h1>
-                    <p class="md:text-lg text-base text-red text-center">Instant Fried Noodles with a soft noodle texture and in combination of sweet and savory flavors made from herbs and spices complemented by chili sauce, soy sauce and fried onions in food grade and hygienic packaging in pillow form. Now available in 1 variant</p>
+                    <p class="md:text-lg text-base text-blue text-center">Instant Fried Noodles with a soft noodle texture and in combination of sweet and savory flavors made from herbs and spices complemented by chili sauce, soy sauce and fried onions in food grade and hygienic packaging in pillow form. Now available in 1 variant</p>
                         <ul class="mt-6 md:w-[35rem] w-[25rem] items-center text-center justify-center">
                             <li class="pt-4">
                                 <p class="md:text-2xl text-base text-blue md:font-bold font-normal">Original</p>
@@ -109,8 +109,8 @@
             <div class="mt-12">
                 <div class="xl:mx-20 md:mx-12 mx-4 pt-12 grid xl:grid-cols-2 grid-cols-1 gap-6">
                     <div class="sm:flex xl:flex-col lg:flex-row sm:flex-row sm:gap-24 flex-col">
-                        <div class="flex flex-col">
-                            <h1 class="text-3xl font-bold text-blue">PT JAKARANA TAMA</h1>
+                        <div class="flex flex-col text-blue">
+                            <h1 class="lg:text-3xl text-2xl font-bold">PT JAKARANA TAMA</h1>
                             <h3 class="text-2xl font-medium">Head Office</h3>
                                 <div class="pt-4 leading-8">
                                     <p>Jl. Bintaro Raya No.15, RT.11/RW.10</p>
@@ -132,15 +132,15 @@
                     <div class="flex flex-col items-center justify-center">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0795913919924!2d106.77129107503795!3d-6.253243893735208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1a4f71c6edd%3A0x49fec2a2d463e427!2sPT%20Jakarana%20Tama%20Main%20Office%20(GaGa)!5e0!3m2!1sen!2sid!4v1727405563222!5m2!1sen!2sid"
                         class="sm:w-[700px] sm:h-[350px]" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <div class="flex flex-col justify-center items-center mt-8">
-                            <h1 class="text-3xl font-bold text-blue">GAGA Social Media</h1>
+                        <div class="flex flex-col justify-center text-blue items-center mt-8">
+                            <h1 class="text-3xl font-bold">GAGA Social Media</h1>
                             <div class="pt-6">
                                 <div class="flex gap-4 justify-center items-center">
-                                    <img src="../../asset/icon-ig.png" alt="" class="md:w-8 md:h-8 w-6 h-6"/>
+                                    <img src="../../asset/icon-ig.png" alt="" class="w-8 h-8"/>
                                     <p>@gagafood.co.id | @gaga100extrapedas | @indonesia.mie</p>
                                 </div>
                                 <div class="flex gap-4 pt-4 justify-center items-center">
-                                    <img src="../../asset/icon-tt.png" alt="" class="md:w-8 md:h-8 w-6 h-6"/>
+                                    <img src="../../asset/icon-tt.png" alt="" class="w-8 h-8"/>
                                     <p>@gagafood.co.id | @gaga100extrapedas | @indonesia.mie</p>
                                 </div>
                             </div>
@@ -160,6 +160,6 @@
         </div>
     </footer>
 
-    <script src="../../public/produk.js"></script>
+    <script src="../../public/produk-detail.js"></script>
 </body>
 </html>
