update icon head

--- a/public/about.html
+++ b/public/about.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../public/css/output.css" />
     <link rel="stylesheet" href="../public/css/hamburger.css">
 
+    <!-- logo -->
+    <link rel="icon" href="../asset/logo-gaga.png">
+
     <!-- Google icon -->
     <link
       rel="stylesheet"
