--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gaga.co.id</title>
 
+    <!-- logo -->
+    <link rel="icon" href="../asset/logo-gaga.png">
     <!-- Link css -->
     <link rel="stylesheet" href="../public/css/output.css">
     <link rel="stylesheet" href="../public/css/hamburger.css">
