--- a/public/product/detail3.html
+++ b/public/product/detail3.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GAGA BEEF READY TO EAT</title>
+
+    <!-- logo -->
+    <link rel="icon" href="../../asset/logo-gaga.png">
+    
     <link rel="stylesheet" href="../../public/css/output.css">
     <link rel="stylesheet" href="../../public/css/hamburger.css">
 </head>
