update ukuran logo produk pada halaman index

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
             <!-- Banner -->
             <div class="mt-12"> 
                 <div class="lg:flex lg:flex-row md:flex-col flex-col items-center justify-center gap-8">
-                    <img src="../asset/banner4.jpg" alt="" class="w-full">
+                    <img src="../asset/banner4.jpg" alt="" class="w-auto">
                 </div>
             </div>
 
